Modified range input, fixed hidden description scrollbars, minor style changes

--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -40,6 +40,9 @@
 		width: 240px;
 		margin: 0 50px 10px;
 		padding: 10px;
+		.description-wrapper {
+			position: relative;
+		}
 		.description {
 			display: flex;
 			position: relative;
@@ -81,7 +84,7 @@
 				left: 0px;
 				width: 65px;
 				max-height: 300px;
-				overflow: scroll;
+				overflow-y: scroll;
 				border-radius: 4px;
 				font-size: 0.8rem;
 				font-style: italic;
@@ -91,6 +94,8 @@
 				height: 0;
 				text-overflow: ellipsis;
 				transition: height 0.15s ease, padding 0.15s ease, width 0.1s ease, left 0.1s ease;
+
+
 
 				p {
 					display: flex;
@@ -146,5 +151,19 @@
 					transform: scale(1.15, 1.15);
 				}
 			}
-		}
+		
 	}
+}
+
+body::-webkit-scrollbar {
+    width: 1em;
+}
+ 
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
